// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostCard does not render excerpt when explicitly null 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-ihz6y5"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-iiqpqc"
        >
          <div
            class="css-1mjogk7"
          >
            <div
              class="css-1wualeq"
            >
              Personal
            </div>
          </div>
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <time
            class="created css-68op3f"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard does not render excerpt when explicitly undefined 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-ihz6y5"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-iiqpqc"
        >
          <div
            class="css-1mjogk7"
          >
            <div
              class="css-1wualeq"
            >
              Personal
            </div>
          </div>
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <time
            class="created css-68op3f"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard matches the snapshot without excerpt 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-ihz6y5"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-iiqpqc"
        >
          <div
            class="css-1mjogk7"
          >
            <div
              class="css-1wualeq"
            >
              Personal
            </div>
          </div>
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <time
            class="created css-68op3f"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders as image-only recap when isRecap prop is true 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-ihz6y5"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-iiqpqc"
        >
          <div
            class="css-1mjogk7"
          >
            <div
              class="css-1wualeq"
            >
              Personal
            </div>
          </div>
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <time
            class="created css-68op3f"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders excerpt when provided 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-ihz6y5"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-iiqpqc"
        >
          <div
            class="css-1mjogk7"
          >
            <div
              class="css-1wualeq"
            >
              Personal
            </div>
          </div>
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <time
            class="created css-x6ddoz"
          >
            1592202624
          </time>
          <p
            class="description css-1w28v9e"
          >
            This is a sample excerpt for the blog post.
          </p>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders in horizontal layout when horizontal prop is true 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-8wyef3"
    >
      <div
        class="card-content css-1taqpx2"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-13omqdc"
          />
        </div>
        <div
          class="css-p08ytg"
        >
          <div
            class="css-1mjogk7"
          >
            <div
              class="css-1wualeq"
            >
              Personal
            </div>
          </div>
          <h3
            class="css-zzhc1o"
          >
            My Blog Post
          </h3>
          <time
            class="created css-68op3f"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders without banner when not provided 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-ihz6y5"
      >
        <div
          class="css-iiqpqc"
        >
          <div
            class="css-1mjogk7"
          >
            <div
              class="css-1wualeq"
            >
              Personal
            </div>
          </div>
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <time
            class="created css-68op3f"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`PostCard renders without category when not provided 1`] = `
<DocumentFragment>
  <a
    class="css-1355rc8"
    href="/blog/article"
  >
    <div
      class="css-139dwiw"
    >
      <div
        class="card-content css-ihz6y5"
      >
        <div
          class="card-media css-1usooy4"
        >
          <div
            class="css-1kkguim"
          />
        </div>
        <div
          class="css-iiqpqc"
        >
          <h3
            class="css-10lfs8r"
          >
            My Blog Post
          </h3>
          <time
            class="created css-68op3f"
          >
            1592202624
          </time>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
